--- a/ResumeApp/Base.lproj/Main.storyboard
+++ b/ResumeApp/Base.lproj/Main.storyboard
@@ -1,24 +1,159 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O74-wk-IBe">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--General-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ResumeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About Me" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbD-bX-YRM">
+                                <rect key="frame" x="20" y="64" width="374" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QoH-Lj-JN3">
+                                <rect key="frame" x="1.5" y="412" width="411" height="72"/>
+                                <string key="text">Hello 👋
+My name is Vlad. I live in Kiev. I'm 30 years old. 
+And I learning iOS Developing in Swift</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QoH-Lj-JN3" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="0oo-mh-QbT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sbD-bX-YRM" secondAttribute="trailing" constant="20" id="Flo-nv-jJd"/>
+                            <constraint firstItem="sbD-bX-YRM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Qp8-sZ-rZ5"/>
+                            <constraint firstItem="sbD-bX-YRM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="biU-6v-QaT"/>
+                            <constraint firstItem="QoH-Lj-JN3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wbi-Hz-TJN"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="General" id="gI5-z9-c5S"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1224.6376811594205" y="-790.17857142857144"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Oi3-h3-vnI">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="O74-wk-IBe" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eHO-Mz-bB6">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="t6k-sL-k1U"/>
+                        <segue destination="0Xk-tg-Nmo" kind="relationship" relationship="viewControllers" id="YRg-3T-XfG"/>
+                        <segue destination="5LN-i3-Rcn" kind="relationship" relationship="viewControllers" id="wj0-lN-f1Z"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="glV-Bg-AXU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="78.348214285714278"/>
+        </scene>
+        <!--Goals-->
+        <scene sceneID="Sor-JM-7yC">
+            <objects>
+                <viewController id="5LN-i3-Rcn" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ti8-eB-gPL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Goals" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCp-sr-5il">
+                                <rect key="frame" x="20" y="64" width="374" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="leQ-IG-HYI">
+                                <rect key="frame" x="92.5" y="412" width="229" height="72"/>
+                                <string key="text">🥇 Build my favourite life
+🥈 Travelling, a lot
+🥉 Not think about money</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="TCp-VF-FM6"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="FCp-sr-5il" firstAttribute="top" secondItem="TCp-VF-FM6" secondAttribute="top" constant="20" id="8KW-aH-fii"/>
+                            <constraint firstItem="leQ-IG-HYI" firstAttribute="centerY" secondItem="ti8-eB-gPL" secondAttribute="centerY" id="JP9-JL-XAq"/>
+                            <constraint firstItem="leQ-IG-HYI" firstAttribute="centerX" secondItem="ti8-eB-gPL" secondAttribute="centerX" id="U4A-rD-ZKC"/>
+                            <constraint firstItem="TCp-VF-FM6" firstAttribute="trailing" secondItem="FCp-sr-5il" secondAttribute="trailing" constant="20" id="iHR-at-0D2"/>
+                            <constraint firstItem="FCp-sr-5il" firstAttribute="leading" secondItem="TCp-VF-FM6" secondAttribute="leading" constant="20" id="m3G-J4-d9x"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Goals" id="7v8-MY-E7I"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ktN-yd-eXO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1224.6376811594205" y="603.34821428571422"/>
+        </scene>
+        <!--Hobbies-->
+        <scene sceneID="eFw-93-brg">
+            <objects>
+                <viewController id="0Xk-tg-Nmo" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eZ1-AW-gY3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My hobbies" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6d-ek-ncg">
+                                <rect key="frame" x="20" y="64" width="374" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GoL-dd-tUM">
+                                <rect key="frame" x="127" y="388.5" width="160.5" height="119.5"/>
+                                <string key="text">📚 Reading Books
+🎮 Play games
+🎬 Watching films
+🚶‍♂️ Walk
+😴 Sleep</string>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="nfS-0N-yon"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nfS-0N-yon" firstAttribute="trailing" secondItem="h6d-ek-ncg" secondAttribute="trailing" constant="20" id="F9x-K0-DQC"/>
+                            <constraint firstItem="h6d-ek-ncg" firstAttribute="top" secondItem="nfS-0N-yon" secondAttribute="top" constant="20" id="Wt6-dR-gTf"/>
+                            <constraint firstItem="GoL-dd-tUM" firstAttribute="centerY" secondItem="eZ1-AW-gY3" secondAttribute="centerY" id="XfR-Rn-AsI"/>
+                            <constraint firstItem="h6d-ek-ncg" firstAttribute="leading" secondItem="nfS-0N-yon" secondAttribute="leading" constant="20" id="hRd-Lu-M0X"/>
+                            <constraint firstItem="GoL-dd-tUM" firstAttribute="centerX" secondItem="eZ1-AW-gY3" secondAttribute="centerX" id="mpJ-St-o4p"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Hobbies" id="gBP-X5-F9s"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YdW-Mj-FKJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1224.6376811594205" y="-76.339285714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
